# opengl-graphics

./: CMakeLists.txt  buildNrun.sh  makefile
include/: IndexBuffer.hpp  Renderer.hpp  VertexBuffer.hpp
scripts/: buildNrun.sh
src/: Application.cpp  IndexBuffer.cpp  Renderer.cpp  VertexBuffer.cpp
